--- a/package.xml
+++ b/package.xml
@@ -3,7 +3,7 @@
   <name>skeleton_msgs</name>
   <version>0.1.0</version>
   <description>Hi-ROS mantained skeleton_msgs package</description>
-  <maintainer email="luca.tagliapietra@unipd.it">lucaTagliapeitra @ Hi-ROS</maintainer>
+  <maintainer email="luca.tagliapietra@unipd.it">lucaTagliapietra @ Hi-ROS</maintainer>
   <license>TODO</license>
 
   <url type="website">https://gitlab.com/hi-ros</url>
