--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,9 +42,24 @@ catkin_package(CATKIN_DEPENDS
                std_msgs
                geometry_msgs)
 
+           catkin_package(LIBRARIES ${PROJECT_NAME}_types
+               INCLUDE_DIRS include)
+
 # ##############################################################################
 # Build ##
 # ##############################################################################
+set(${PROJECT_NAME}_HEADERS
+    include/skeleton_msgs/types.h
+    include/skeleton_msgs/utils.h)
+
+set(${PROJECT_NAME}_SOURCES
+    src/types.cpp
+    src/utils.cpp)
+
+# Specify additional locations of header files
+include_directories(
+    ${catkin_INCLUDE_DIRS}
+    ${PROJECT_SOURCE_DIR}/include)
 
 # Display additional files in qtcreator
 file(GLOB_RECURSE
@@ -79,3 +94,6 @@ add_custom_target(additional_files_${PROJECT_NAME} SOURCES ${FILES_LIST})
 # Mark other files for installation (e.g. launch and bag files, etc.)
 # install(FILES # myfile1 # myfile2 DESTINATION
 # ${CATKIN_PACKAGE_SHARE_DESTINATION} )
+
+add_library(${PROJECT_NAME}_types SHARED ${${PROJECT_NAME}_SOURCES})
+target_include_directories(${PROJECT_NAME}_types INTERFACE include)
