--- a/package.xml
+++ b/package.xml
@@ -4,10 +4,12 @@
   <version>0.1.0</version>
   <description>Hi-ROS mantained skeleton_msgs package</description>
   <maintainer email="luca.tagliapietra@unipd.it">lucaTagliapietra @ Hi-ROS</maintainer>
+  <maintainer email="mattia.guidolin@phd.unipd.it">mguidolin @ Hi-ROS</maintainer>
   <license>TODO</license>
 
   <url type="website">https://gitlab.com/hi-ros</url>
   <author email="luca.tagliapietra@unipd.it">Luca Tagliapietra</author>
+  <author email="mattia.guidolin@phd.unipd.it">Mattia Guidolin</author>
 
   <buildtool_depend>catkin</buildtool_depend>
 
