--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,9 @@ add_compile_options(-std=c++11)
 # Find catkin macros and libraries if COMPONENTS list like find_package(catkin
 # REQUIRED COMPONENTS xyz) is used, also find other catkin packages
 find_package(catkin REQUIRED
-             COMPONENTS message_generation
-                        std_msgs
-                        geometry_msgs)
+             COMPONENTS geometry_msgs
+                        message_generation
+                        std_msgs)
 
 # ##############################################################################
 # Declare ROS messages, services and actions ##
@@ -17,16 +17,16 @@ find_package(catkin REQUIRED
 
 # Generate messages in the 'msg' folder
 add_message_files(FILES
-                  Keypoint.msg
                   Box.msg
+                  Keypoint.msg
                   KeypointGroup.msg
                   Skeleton.msg
                   SkeletonGroup.msg)
 
 # Generate added messages and services with any dependencies listed here
 generate_messages(DEPENDENCIES
-                  std_msgs
-                  geometry_msgs)
+                  geometry_msgs
+                  std_msgs)
 
 # ##############################################################################
 # catkin specific configuration ##
@@ -38,14 +38,11 @@ generate_messages(DEPENDENCIES
 # projects also need DEPENDS: system dependencies of this project that dependent
 # projects also need
 catkin_package(CATKIN_DEPENDS
+               geometry_msgs
                message_runtime
                std_msgs
-               geometry_msgs)
-
-catkin_package(LIBRARIES
-               ${PROJECT_NAME}_types
-               INCLUDE_DIRS
-               include)
+               LIBRARIES
+               ${PROJECT_NAME}_types)
 
 # ##############################################################################
 # Build ##
@@ -58,7 +55,7 @@ add_library(${PROJECT_NAME}_types SHARED ${${PROJECT_NAME}_SOURCES})
 target_include_directories(${PROJECT_NAME}_types
                            PUBLIC include ${catkin_INCLUDE_DIRS})
 
-add_dependencies(${PROJECT_NAME}_types skeleton_msgs_generate_messages_cpp)
+add_dependencies(${PROJECT_NAME}_types ${PROJECT_NAME}_generate_messages_cpp)
 
 # ##############################################################################
 # Create fake target for common ROS file extensions
@@ -75,24 +72,9 @@ add_custom_target(additional_files_${PROJECT_NAME} SOURCES ${FILES_LIST})
 # ##############################################################################
 # Install ##
 # ##############################################################################
+install(TARGETS ${PROJECT_NAME}_types
+        LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+        RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
-# all install targets should use catkin DESTINATION variables See
-# http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
-
-# Mark executable scripts (Python etc.) for installation in contrast to
-# setup.py, you can choose the destination install(PROGRAMS
-# scripts/my_python_script DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION} )
-
-# Mark executables and/or libraries for installation install(TARGETS
-# ${PROJECT_NAME} ${PROJECT_NAME}_node ARCHIVE DESTINATION
-# ${CATKIN_PACKAGE_LIB_DESTINATION} LIBRARY DESTINATION
-# ${CATKIN_PACKAGE_LIB_DESTINATION} RUNTIME DESTINATION
-# ${CATKIN_PACKAGE_BIN_DESTINATION} )
-
-# Mark cpp header files for installation install(DIRECTORY
-# include/${PROJECT_NAME}/ DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-# FILES_MATCHING PATTERN "*.h" PATTERN ".svn" EXCLUDE )
-
-# Mark other files for installation (e.g. launch and bag files, etc.)
-# install(FILES # myfile1 # myfile2 DESTINATION
-# ${CATKIN_PACKAGE_SHARE_DESTINATION} )
+install(DIRECTORY include/skeletons/
+        DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
