--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0)
-project(skeleton_msgs)
+project(hiros_skeleton_msgs)
 
 # Compile as C++11, supported in ROS Kinetic and newer
 add_compile_options(-std=c++14)
