--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>skeleton_msgs</name>
+  <name>hiros_skeleton_msgs</name>
   <version>0.1.0</version>
   <description>Hi-ROS mantained skeleton_msgs package</description>
   <maintainer email="luca.tagliapietra@unipd.it">lucaTagliapietra @ Hi-ROS</maintainer>
