--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,7 @@
   <depend>geometry_msgs</depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>tf2</depend>
 
   <build_depend>message_generation</build_depend>
   
