--- a/package.xml
+++ b/package.xml
@@ -1,22 +1,33 @@
 <?xml version="1.0"?>
-<package format="2">
+<?xml-model
+   href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+
+<package format="3">
   <name>hiros_skeleton_msgs</name>
   <version>0.1.0</version>
   <description>Hi-ROS mantained skeleton_msgs package</description>
-  <maintainer email="luca.tagliapietra@unipd.it">lucaTagliapietra @ Hi-ROS</maintainer>
-  <maintainer email="mattia.guidolin@phd.unipd.it">mguidolin @ Hi-ROS</maintainer>
-  <license>TODO</license>
+  <maintainer email="mattia.guidolin@unipd.it">mguidolin @ Hi-ROS</maintainer>
+  <license>Apache License 2.0</license>
 
-  <url type="website">https://gitlab.com/hi-ros</url>
-  <author email="luca.tagliapietra@unipd.it">Luca Tagliapietra</author>
-  <author email="mattia.guidolin@phd.unipd.it">Mattia Guidolin</author>
+  <url type="website">https://github.com/hiros-unipd</url>
+  <author email="mattia.guidolin@unipd.it">Mattia Guidolin</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
+
+  <build_depend>rosidl_default_generators</build_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
+
+  <depend>rclcpp</depend>
+  <depend>builtin_interfaces</depend>
+  <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>tf2</depend>
-
-  <build_depend>message_generation</build_depend>
-  <build_export_depend>message_runtime</build_export_depend>
-  <exec_depend>message_runtime</exec_depend>
 </package>
